# crowbook-text-processing

./: .travis.yml  Cargo.toml  ChangeLog.md  README.md  README.tpl
benches/: bench.rs  perf.ods
examples/: french.rs  readme.rs
src/: clean.rs  common.rs  escape.rs  french.rs  lib.rs
src/lib/: caps.rs  clean.rs  escape.rs  french.rs  lib.rs
