[package]
name = "crowbook-text-processing"
version = "0.2.0"
authors = ["Elisabeth Henry <liz.henry@ouvaton.org>"]
description = "Some text processing functions written for Crowbook and moved in a separate library. Include html/tex escaping, unnecessary whitespace cleaning, and french typographic formatting."
readme = "README.md"
keywords = ["text"]
repository = "https://github.com/lise-henry/crowbook-text-processing/"
documentation = "https://docs.rs/crowbook-text-processing"
license = "MPL-2.0"

[dependencies]
regex = "0.1"
lazy_static = "0.2"
